--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- #CSS Links -->
+
+    <!-- My styles -->
+    <link rel="stylesheet" href="css/style.css">
+
     <!-- Basic Styles -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/font-awesome.min.css">
@@ -336,86 +340,89 @@
 
             <ul>
                 <li>
-                    <a href="/#/sinhvien/dashboard" title="Dashboard"><i class="fa fa-lg fa-fw fa-home"></i> <span
-                            class="">Trang
+                    <a href="#" title="Trang chủ"><i class="fa fa-lg fa-fw fa-home"></i> <span class="">Trang
                             Chủ</span></a>
                 </li>
                 <li>
-                    <a href="/#/sinhvien/quan-ly-thong-tin-co-ban/tong-quan"><i class="fa fa-lg fa-fw fa-home"></i>
+                    <a href="#" title="Hồ sơ cá nhân"><i class="fa fa-lg fa-fw fa-home"></i>
                         <span class="">Hồ Sơ Cá Nhân</span></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Học
+                    <a href="#" title="Học tập"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span
+                            class="menu-item-parent">Học
                             Tập</span></a>
                     <ul>
                         <li>
-                            <a href="#">Thời Khóa Biểu</a>
+                            <a href="ThoiKhoaBieu.html" title="Thời khóa biểu">Thời Khóa Biểu</a>
                         </li>
                         <li>
-                            <a href="#">Lớp Học</a>
+                            <a href="#" title="Lớp học">Lớp Học</a>
                         </li>
                         <li>
-                            <a href="#">Điểm</a>
+                            <a href="#" title="Điểm">Điểm</a>
                         </li>
                         <li>
-                            <a href="#">Điểm (Khoa Dược)</a>
+                            <a href="#" title="Điểm (Khoa dược)">Điểm (Khoa Dược)</a>
                         </li>
                         <li>
-                            <a href="#">Lịch Thi</a>
+                            <a href="#" title="Lịch thi">Lịch Thi</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="/#/sinhvien/xac-nhan-sinh-vien/bieu-mau-da-gui"><i class="fa fa-lg fa-fw fa-inbox"></i>
+                    <a href="#" title="Xác nhận online"><i class="fa fa-lg fa-fw fa-inbox"></i>
                         <span class="menu-item-parent">Xác Nhận Online</span></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-table"></i> <span class="menu-item-parent">Đánh Giá Rèn
+                    <a href="#" title="Đánh giá rèn luyện"><i class="fa fa-lg fa-fw fa-table"></i> <span
+                            class="menu-item-parent">Đánh Giá Rèn
                             Luyện</span></a>
                     <ul>
                         <li>
-                            <a href="/#/diem-ca-nhan">Điểm cá nhân</a>
+                            <a href="#" title="Điểm cá nhân">Điểm cá nhân</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-pencil-square-o"></i> <span class="menu-item-parent">Khảo
-                            Sát</span></a>
+                    <a href="#" title="Khảo sát"><i class="fa fa-lg fa-fw fa-pencil-square-o"></i> <span
+                            class="menu-item-parent">Khảo Sát</span></a>
                     <ul>
                         <li>
-                            <a href="/#/hoat-dong-giang-day">Hoạt Động Giảng Dạy</a>
+                            <a href="#" title="Hoạt động giảng dạy">Hoạt Động Giảng Dạy</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-desktop"></i> <span class="menu-item-parent">Hoạt Động Sinh
-                            Viên</span></a>
+                    <a href="#" title="Hoạt Động Sinh Viên"><i class="fa fa-lg fa-fw fa-desktop"></i> <span
+                            class="menu-item-parent">Hoạt Động Sinh Viên</span></a>
                     <ul>
                         <li>
-                            <a href="#">Hồ Sơ SINH VIÊN 5 TỐT</a>
+                            <a href="#" title="Hồ Sơ SINH VIÊN 5 TỐT">Hồ Sơ SINH VIÊN 5 TỐT</a>
                         </li>
                         <li>
-                            <a href="#">Ghi nhân tham gia hoạt động</a>
+                            <a href="#" title="Ghi nhận tham gia hoạt động">Ghi nhận tham gia hoạt động</a>
                         </li>
                         <li>
-                            <a href="#">Tài liệu, thông tin hoạt động</a>
+                            <a href="#" title="Tài liệu, thông tin hoạt động">Tài liệu, thông tin hoạt động</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="/#/cai-dat-tai-khoan"><i class="fa fa-lg fa-fw fa-home"></i> <span class="">Cài đặt tài
+                    <a href="#" title="Cài đặt tài khoản"><i class="fa fa-lg fa-fw fa-home"></i> <span class="">Cài đặt
+                            tài
                             khoản</span></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-desktop"></i> <span class="menu-item-parent">Khác</span></a>
+                    <a href="#" title="Khác"><i class="fa fa-lg fa-fw fa-desktop"></i> <span
+                            class="menu-item-parent">Khác</span></a>
                     <ul>
                         <li>
-                            <a href="#">COVID Khai báo y tế</a>
+                            <a href="#" title="COVID Khai báo y tế">COVID Khai báo y tế</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="/#/ho-tro"><i class="fa fa-lg fa-fw fa-home"></i> <span class="">Hỗ Trợ</span></a>
+                    <a href="#"><i class="fa fa-lg fa-fw fa-home" title="Hỗ Trợ"></i> <span class="">Hỗ Trợ</span></a>
                 </li>
             </ul>
         </nav>
@@ -463,154 +470,89 @@
         </div>
         <!-- END RIBBON -->
 
-
-
         <!-- MAIN CONTENT -->
         <div id="content">
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Tiết</th>
+                            <th>Mã Môn Học</th>
+                            <th>Tên Môn</th>
+                            <th>Thông tin tiết học</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th colspan="4" class="background-thoi-gian">Thứ 2, ngày 20/02/2023</th>
+                        </tr>
+                        <tr>
+                            <td class="tiet-hoc">2-6</td>
+                            <td>NDF211</td>
+                            <td>Quốc Phòng An Ninh 4</td>
+                            <td>Phòng: <strong>E1-12.02</strong> - Lớp: <strong>QP4_E1</strong></td>
+                        </tr>
+                    </tbody>
 
-            <!-- row -->
-            <div class="row">
+                    <tbody>
+                        <tr>
+                            <th colspan="4" class="background-thoi-gian">Thứ 4, ngày 22/02/2023</th>
+                        </tr>
+                        <tr>
+                            <td class="tiet-hoc">7-11</td>
+                            <td>CMP315</td>
+                            <td>Thực hành kỹ thuật lập trình</td>
+                            <td>Phòng: <strong>E1-10.03</strong> - Lớp: <strong>LT1_E2</strong></td>
+                        </tr>
+                    </tbody>
 
-                <!-- col -->
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h1 class="page-title txt-color-blueDark text-center well">
+                    <tbody>
+                        <tr>
+                            <th colspan="4" class="background-thoi-gian">Thứ 5, ngày 23/02/2023</th>
+                        </tr>
+                        <tr>
+                            <td class="tiet-hoc">1-3</td>
+                            <td>PHT307</td>
+                            <td>Bóng rổ 1</td>
+                            <td>Phòng: <strong>E1-12.03</strong> - Lớp: <strong>BR_E2</strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="tiet-hoc">2-6</td>
+                            <td>NDF211</td>
+                            <td>Quốc Phòng An Ninh 4</td>
+                            <td>Phòng: <strong>E1-12.02</strong> - Lớp: <strong>QP4_E1</strong></td>
+                        </tr>
+                    </tbody>
 
-                        <!-- PAGE HEADER -->
-                        SmartAdmin Pre-built Skins<br>
-                        <small class="text-primary">Don't like the default look of SmartAdmin? Not a problem! SmartAdmin
-                            comes with 6 prebuilt skins to choose from.</small>
-                    </h1>
+                    <tbody>
+                        <tr>
+                            <th colspan="4" class="background-thoi-gian">Thứ 2, ngày 20/02/2023</th>
+                        </tr>
+                        <tr>
+                            <td class="tiet-hoc">2-6</td>
+                            <td>NDF211</td>
+                            <td>Quốc Phòng An Ninh 4</td>
+                            <td>Phòng: <strong>E1-12.02</strong> - Lớp: <strong>QP4_E1</strong></td>
+                        </tr>
+                    </tbody>
 
-                </div>
-                <!-- end col -->
-
+                    <tbody>
+                        <tr>
+                            <th colspan="4" class="background-thoi-gian">Thứ 2, ngày 20/02/2023</th>
+                        </tr>
+                        <tr>
+                            <td class="tiet-hoc">2-6</td>
+                            <td>NDF211</td>
+                            <td>Quốc Phòng An Ninh 4</td>
+                            <td>Phòng: <strong>E1-12.02</strong> - Lớp: <strong>QP4_E1</strong></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <!-- end row -->
-
-            <!--
-					The ID "widget-grid" will start to initialize all widgets below 
-					You do not need to use widgets if you dont want to. Simply remove 
-					the <section></section> and you can use wells or panels instead 
-					-->
-
-            <!-- widget grid -->
-            <section id="widget-grid" class="">
-
-                <!-- row -->
-
-                <div class="row">
-
-                    <!-- a blank row to get started -->
-                    <div class="col-sm-6">
-                        <!-- your contents here -->
-                        <div class="well text-center">
-                            <h5>
-                                Skin name "<strong>Glass</strong>" <br>
-                                <small>Add the following class to body tag <code>.smart-style-5</code></small>
-                            </h5>
-                            <img src="img/demo/layout-skins/skin-glass.png" class="img-responsive center-block"
-                                style="box-shadow: 0px 0px 3px 0px #919191;" alt="glass">
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <!-- your contents here -->
-                        <div class="well text-center">
-                            <h5>
-                                Skin name "<strong>Material Design</strong>" <sup>beta</sup> <br>
-                                <small>Add the following class to body tag <code>.smart-style-6</code></small>
-                            </h5>
-                            <img src="img/demo/layout-skins/skin-material.png" class="img-responsive center-block"
-                                alt="material" style="box-shadow: 0px 0px 3px 0px #919191;">
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="row">
-
-                    <!-- a blank row to get started -->
-                    <div class="col-sm-6">
-                        <!-- your contents here -->
-                        <div class="well text-center">
-                            <h5>
-                                Skin name "<strong>PixelSmash</strong>" <br>
-                                <small>Add the following class to body tag <code>.smart-style-4</code></small>
-                            </h5>
-                            <img src="img/demo/layout-skins/skin-pixel.png" class="img-responsive center-block"
-                                alt="pixel" style="box-shadow: 0px 0px 3px 0px #919191;">
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <!-- your contents here -->
-                        <div class="well text-center">
-                            <h5>
-                                Skin name "<strong>Dark Elegance</strong>" <br>
-                                <small>Add the following class to body tag <code>.smart-style-1</code></small>
-                            </h5>
-                            <img src="img/demo/layout-skins/skin-dark.png" class="img-responsive center-block"
-                                alt="dark" style="box-shadow: 0px 0px 3px 0px #919191;">
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="row">
-
-                    <!-- a blank row to get started -->
-                    <div class="col-sm-6">
-                        <!-- your contents here -->
-                        <div class="well text-center">
-                            <h5>
-                                Skin name "<strong>Google</strong>" <br>
-                                <small>Add the following class to body tag <code>.smart-style-3</code></small>
-                            </h5>
-                            <img src="img/demo/layout-skins/skin-google.png" class="img-responsive center-block"
-                                alt="google" style="box-shadow: 0px 0px 3px 0px #919191;">
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <!-- your contents here -->
-                        <div class="well text-center">
-                            <h5>
-                                Skin name "<strong>Ultra Light</strong>" <br>
-                                <small>Add the following class to body tag <code>.smart-style-2</code></small>
-                            </h5>
-                            <img src="img/demo/layout-skins/skin-ultralight.png" class="img-responsive center-block"
-                                alt="ultralight" style="box-shadow: 0px 0px 3px 0px #919191;">
-                        </div>
-                    </div>
-
-                </div>
-                <!-- end row -->
-
-                <div class="row">
-
-                    <!-- a blank row to get started -->
-                    <div class="col-sm-6">
-                        <!-- your contents here -->
-                        <div class="well text-center">
-                            <h5>
-                                Skin name "<strong>Default</strong>" <br>
-                                <small>Add the following class to body tag <code>.smart-style-0</code></small>
-                            </h5>
-                            <img src="img/demo/layout-skins/skin-default.png" class="img-responsive center-block"
-                                style="box-shadow: 0px 0px 3px 0px #919191;">
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <!-- your contents here -->
-
-                    </div>
-
-                </div>
-                <!-- end row -->
-
-            </section>
-            <!-- end widget grid -->
-
-
         </div>
         <!-- END MAIN CONTENT -->
+
 
     </div>
     <!-- END MAIN PANEL -->
@@ -631,42 +573,6 @@
         </div>
     </div>
     <!-- END PAGE FOOTER -->
-
-    <!-- SHORTCUT AREA : With large tiles (activated via clicking user name tag)
-		Note: These tiles are completely responsive,
-		you can add as many as you like
-		-->
-    <div id="shortcut">
-        <ul>
-            <li>
-                <a href="inbox.html" class="jarvismetro-tile big-cubes bg-color-blue"> <span class="iconbox"> <i
-                            class="fa fa-envelope fa-4x"></i> <span>Mail <span
-                                class="label pull-right bg-color-darken">14</span></span> </span> </a>
-            </li>
-            <li>
-                <a href="calendar.html" class="jarvismetro-tile big-cubes bg-color-orangeDark"> <span class="iconbox">
-                        <i class="fa fa-calendar fa-4x"></i> <span>Calendar</span> </span> </a>
-            </li>
-            <li>
-                <a href="gmap-xml.html" class="jarvismetro-tile big-cubes bg-color-purple"> <span class="iconbox"> <i
-                            class="fa fa-map-marker fa-4x"></i> <span>Maps</span> </span> </a>
-            </li>
-            <li>
-                <a href="invoice.html" class="jarvismetro-tile big-cubes bg-color-blueDark"> <span class="iconbox"> <i
-                            class="fa fa-book fa-4x"></i> <span>Invoice <span
-                                class="label pull-right bg-color-darken">99</span></span> </span> </a>
-            </li>
-            <li>
-                <a href="gallery.html" class="jarvismetro-tile big-cubes bg-color-greenLight"> <span class="iconbox"> <i
-                            class="fa fa-picture-o fa-4x"></i> <span>Gallery </span> </span> </a>
-            </li>
-            <li>
-                <a href="profile.html" class="jarvismetro-tile big-cubes selected bg-color-pinkDark"> <span
-                        class="iconbox"> <i class="fa fa-user fa-4x"></i> <span>My Profile </span> </span> </a>
-            </li>
-        </ul>
-    </div>
-    <!-- END SHORTCUT AREA -->
 
     <!--================================================== -->
 
