--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -482,7 +482,7 @@
 
             </div>
 
-            <div class="well">
+            <div class="well padding-30px">
                 <div class="row">
                     <div class="alert alert-warning fade in">
                         <i class="fa-fw fa fa-warning"></i>
