update button ngay-thang-nam

--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -482,8 +482,52 @@
 
             </div>
 
+            <div class="container-fluid calender">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="calendar-button-left-right">
+                            <button class="btn btn-primary btn-prev"><i class="fa fa-arrow-left"></i></button>
+                            <span class="title-month-year"><strong>Tháng 2, 2023</strong></span>
+                            <button class="btn btn-primary btn-next"><i class="fa fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row calendar-button-lich">
+                    <div class="col-md-6 col-xs-6 text-right">
+                        <button>
+                            <strong>2/2/2023</strong> => <strong>9/2/2023</strong>
+                        </button>
+                    </div>
+                    <div class="col-md-6 col-xs-6 text-left">
+                        <button>
+                            <strong>10/2/2023</strong> => <strong>17/2/2023</strong>
+                        </button>
+                    </div>
+
+                    <div class="col-md-6 col-xs-6 text-right">
+                        <button>
+                            <strong>18/2/2023</strong> => <strong>25/2/2023</strong>
+                        </button>
+                    </div>
+                    <div class="col-md-6 col-xs-6 text-left">
+                        <button>
+                            <strong>26/2/2023</strong> => <strong>3/3/2023</strong>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
             <div class="well">
                 <div class="row">
+                    <!-- alert info -->
+                    <div class="alert alert-info fade in">
+                        <i class="fa-fw fa fa-info"></i>
+                        <strong>Mẹo!</strong> Bạn có thể <strong>Click</strong> vào từng <strong>tiết học</strong> để
+                        xem chi tiết hơn.
+                    </div>
+
+                    <!-- alert warning -->
                     <div class="alert alert-warning fade in">
                         <i class="fa-fw fa fa-warning"></i>
                         <strong>Chú ý:</strong> Sinh viên thường xuyên theo dõi thời khoá biểu để sớm cập nhật thông tin
