--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -489,10 +489,10 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <div class="calendar-button-left-right">
-                            <button class="btn btn-primary btn-prev" onclick="buttonPrev(), getMonth()"><i
+                            <button class="btn btn-primary btn-prev" onclick="buttonPrev(), getCalenderByButton()"><i
                                     class="fa fa-arrow-left"></i></button>
                             <span id="title-month-year" class="title-month-year"><strong>Tháng 2, 2023</strong></span>
-                            <button class="btn btn-primary btn-next" onclick="buttonNext(), getMonth()"><i
+                            <button class="btn btn-primary btn-next" onclick="buttonNext(), getCalenderByButton()"><i
                                     class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
@@ -500,25 +500,25 @@
 
                 <div class="row calendar-button-lich">
                     <div class="col-md-6 col-xs-6 text-right">
-                        <button id="btn-lich-1">
+                        <button id="lich-btn-1">
                             <strong>2/2/2023</strong> => <strong>9/2/2023</strong>
                             <!-- <strong id="timeBefore7days">2/2/2023</strong> => <strong
                                 id="timeAfter7days">9/2/2023</strong> -->
                         </button>
                     </div>
                     <div class="col-md-6 col-xs-6 text-left">
-                        <button id="btn-lich-2">
+                        <button id="lich-btn-2">
                             <strong>10/2/2023</strong> => <strong>17/2/2023</strong>
                         </button>
                     </div>
 
                     <div class="col-md-6 col-xs-6 text-right">
-                        <button id="btn-lich-3">
+                        <button id="lich-btn-3">
                             <strong>18/2/2023</strong> => <strong>25/2/2023</strong>
                         </button>
                     </div>
                     <div class="col-md-6 col-xs-6 text-left">
-                        <button id="btn-lich-4">
+                        <button id="lich-btn-4">
                             <strong>26/2/2023</strong> => <strong>3/3/2023</strong>
                         </button>
                     </div>
