--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -502,26 +502,26 @@
                 </div>
 
                 <div class="row calendar-button-lich">
-                    <div class="col-md-6 col-xs-6 text-right">
-                        <button id="lich-btn-1">
+                    <div class="col-sm-6 col-xs-12 reponsive-align" style="text-align: right;">
+                        <button id="lich-btn-1" onclick="showDataTKB(1)">
                             <strong>2/2/2023</strong> => <strong>9/2/2023</strong>
                             <!-- <strong id="timeBefore7days">2/2/2023</strong> => <strong
                                 id="timeAfter7days">9/2/2023</strong> -->
                         </button>
                     </div>
-                    <div class="col-md-6 col-xs-6 text-left">
-                        <button id="lich-btn-2">
+                    <div class="col-sm-6 col-xs-12 reponsive-align" style="text-align: left;">
+                        <button id="lich-btn-2" onclick="showDataTKB(2)">
                             <strong>10/2/2023</strong> => <strong>17/2/2023</strong>
                         </button>
                     </div>
 
-                    <div class="col-md-6 col-xs-6 text-right">
-                        <button id="lich-btn-3">
+                    <div class="col-sm-6 col-xs-12 reponsive-align" style="text-align: right;">
+                        <button id="lich-btn-3" onclick="showDataTKB(3)">
                             <strong>18/2/2023</strong> => <strong>25/2/2023</strong>
                         </button>
                     </div>
-                    <div class="col-md-6 col-xs-6 text-left">
-                        <button id="lich-btn-4">
+                    <div class="col-sm-6 col-xs-12 reponsive-align" style="text-align: left;">
+                        <button id="lich-btn-4" onclick="showDataTKB(4)">
                             <strong>26/2/2023</strong> => <strong>3/3/2023</strong>
                         </button>
                     </div>
@@ -555,71 +555,107 @@
                                     <th>Thông tin tiết học</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <th colspan="4" class="background-thoi-gian">Thứ 2, ngày 20/02/2023</th>
+                            <tbody class="tbody-thu-ngay-thang">
+                                <!-- <tr>
+                                    <th id="thu-ngay-thang" colspan="4"
+                                        class="background-thu-ngay-thang thu-ngay-thang">
+                                        Thứ 2, ngày 20/02/2023</th>
                                 </tr>
-                                <tr>
+                                <tr id="tbody-content--thong-tin-tiet-hoc" data-toggle="modal" data-target="#myModal">
                                     <td class="tiet-hoc">2-6</td>
-                                    <td>NDF211</td>
-                                    <td>Quốc Phòng An Ninh 4</td>
-                                    <td>Phòng: <strong>E1-12.02</strong> - Lớp: <strong>QP4_E1</strong></td>
-                                </tr>
+                                    <td class="ma-mon-hoc">NDF211</td>
+                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
+                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
+                                        <strong>QP4_E1</strong>
+                                    </td>
+                                </tr> -->
                             </tbody>
 
-                            <tbody>
-                                <tr>
-                                    <th colspan="4" class="background-thoi-gian">Thứ 4, ngày 22/02/2023</th>
+                            <tbody class="tbody-thu-ngay-thang">
+                                <!-- <tr>
+                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 4, ngày
+                                        22/02/2023
+                                    </th>
                                 </tr>
-                                <tr>
+                                <tr data-toggle="modal" data-target="#myModal">
                                     <td class="tiet-hoc">7-11</td>
-                                    <td>CMP315</td>
-                                    <td>Thực hành kỹ thuật lập trình</td>
-                                    <td>Phòng: <strong>E1-10.03</strong> - Lớp: <strong>LT1_E2</strong></td>
-                                </tr>
+                                    <td class="ma-mon-hoc">CMP315</td>
+                                    <td class="ten-mon-hoc">Thực hành kỹ thuật lập trình</td>
+                                    <td class="thong-tin">Phòng: <strong>E1-10.03</strong> - Lớp:
+                                        <strong>LT1_E2</strong>
+                                    </td>
+                                </tr> -->
                             </tbody>
 
-                            <tbody>
-                                <tr>
-                                    <th colspan="4" class="background-thoi-gian">Thứ 5, ngày 23/02/2023</th>
+                            <tbody class="tbody-thu-ngay-thang">
+                                <!-- <tr>
+                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 5, ngày
+                                        23/02/2023
+                                    </th>
                                 </tr>
-                                <tr>
+                                <tr data-toggle="modal" data-target="#myModal">
                                     <td class="tiet-hoc">1-3</td>
-                                    <td>PHT307</td>
-                                    <td>Bóng rổ 1</td>
-                                    <td>Phòng: <strong>E1-12.03</strong> - Lớp: <strong>BR_E2</strong>
+                                    <td class="ma-mon-hoc">PHT307</td>
+                                    <td class="ten-mon-hoc">Bóng rổ 1</td>
+                                    <td class="thong-tin">Phòng: <strong>E1-12.03</strong> - Lớp: <strong>BR_E2</strong>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr data-toggle="modal" data-target="#myModal">
                                     <td class="tiet-hoc">2-6</td>
-                                    <td>NDF211</td>
-                                    <td>Quốc Phòng An Ninh 4</td>
-                                    <td>Phòng: <strong>E1-12.02</strong> - Lớp: <strong>QP4_E1</strong></td>
-                                </tr>
+                                    <td class="ma-mon-hoc">NDF211</td>
+                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
+                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
+                                        <strong>QP4_E1</strong>
+                                    </td>
+                                </tr> -->
                             </tbody>
 
-                            <tbody>
-                                <tr>
-                                    <th colspan="4" class="background-thoi-gian">Thứ 2, ngày 20/02/2023</th>
+                            <tbody class="tbody-thu-ngay-thang">
+                                <!-- <tr>
+                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 2, ngày
+                                        20/02/2023
+                                    </th>
                                 </tr>
-                                <tr>
+                                <tr data-toggle="modal" data-target="#myModal">
                                     <td class="tiet-hoc">2-6</td>
-                                    <td>NDF211</td>
-                                    <td>Quốc Phòng An Ninh 4</td>
-                                    <td>Phòng: <strong>E1-12.02</strong> - Lớp: <strong>QP4_E1</strong></td>
-                                </tr>
+                                    <td class="ma-mon-hoc">NDF211</td>
+                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
+                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
+                                        <strong>QP4_E1</strong>
+                                    </td>
+                                </tr> -->
                             </tbody>
 
-                            <tbody>
-                                <tr>
-                                    <th colspan="4" class="background-thoi-gian">Thứ 2, ngày 20/02/2023</th>
+                            <tbody class="tbody-thu-ngay-thang">
+                                <!-- <tr>
+                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 2, ngày
+                                        20/02/2023
+                                    </th>
                                 </tr>
-                                <tr>
+                                <tr data-toggle="modal" data-target="#myModal">
                                     <td class="tiet-hoc">2-6</td>
-                                    <td>NDF211</td>
-                                    <td>Quốc Phòng An Ninh 4</td>
-                                    <td>Phòng: <strong>E1-12.02</strong> - Lớp: <strong>QP4_E1</strong></td>
+                                    <td class="ma-mon-hoc">NDF211</td>
+                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
+                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
+                                        <strong>QP4_E1</strong>
+                                    </td>
+                                </tr> -->
+                            </tbody>
+
+                            <tbody class="tbody-thu-ngay-thang">
+                                <!-- <tr>
+                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 2, ngày
+                                        20/02/2023
+                                    </th>
                                 </tr>
+                                <tr data-toggle="modal" data-target="#myModal">
+                                    <td class="tiet-hoc">2-6</td>
+                                    <td class="ma-mon-hoc">NDF211</td>
+                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
+                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
+                                        <strong>QP4_E1</strong>
+                                    </td>
+                                </tr> -->
                             </tbody>
                         </table>
                     </div>
@@ -629,6 +665,37 @@
         </div>
         <!-- END MAIN CONTENT -->
 
+        <!-- MODAL SHOW CHI TIẾT CỦA TIẾT HỌC -->
+        <div class="modal fade in" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+            aria-hidden="true" style="display: none;">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                            ×
+                        </button> -->
+                        <h4 class="modal-title text-center" id="myModalLabel">heading-title</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p id="modal-body__lop"></p>
+                        <p id="modal-body__phongHoc"></p>
+                        <p id="modal-body__thu"></p>
+                        <p id="modal-body__tietHoc"></p>
+                        <p id="modal-body__giangVien"></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            Cancel
+                        </button>
+                        <button type="button" class="btn btn-primary">
+                            Post Article
+                        </button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
+
+        <!-- KẾT THÚC SHOW MODAL -->
 
     </div>
     <!-- END MAIN PANEL -->
