responsive diem in mobile

--- a/diem.html
+++ b/diem.html
@@ -475,8 +475,8 @@
                 </div>
             </div>
 
-            <div class="well">
-                <div class="row">
+            <div class="well responsive-mobile">
+                <div class="row table-1-diem-tat-ca">
                     <div class="table-responsive">
                         <table class="table table-hover table-bordered">
                             <thead>
@@ -497,7 +497,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="jarviswidget well change-size">
+                <div class="jarviswidget well table-2-diem-trung-binh">
                     <!-- widget div-->
                     <div>
 
@@ -561,6 +561,36 @@
                     </div>
                     <!-- end widget div -->
                 </div>
+                <!-- responsive mobile -->
+                <div class="row table-2-diem-trung-binh__mini" onclick="showTable__mini()">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th colspan="2">Học kỳ 1 - Năm học 2022-2023</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>Điểm trung bình học kỳ hệ 4:</th>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <th>Điểm trung bình tích lũy (hệ 4):</th>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <th>Số tín chỉ đạt:</th>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <th>Số tín chỉ tích lũy:</th>
+                                    <td>123</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
 
 
@@ -572,7 +602,7 @@
     <!-- PAGE FOOTER -->
     <div class="page-footer">
         <div class="row">
-            <div class="col-xs-6 col-sm-6">
+            <div class="col-xs-12 col-sm-6">
                 <span class="txt-color-white">Bản quyền của <a href="#">HUTECH</a> – Phát triển bởi <a
                         href="#">TTQLCNTT</a> © 2012 - 2023</span>
             </div>
@@ -588,7 +618,7 @@
 
     <!--================================================== -->
     <script src="js/randomData_diem.js"></script>
-
+    <script src="js/xuLiClick_Diem.js"></script>
 
     <!-- PACE LOADER - turn this on if you want ajax loading to show (caution: uses lots of memory on iDevices)-->
     <script data-pace-options='{ "restartOnRequestAfter": true }' src="js/plugin/pace/pace.min.js"></script>
