lớp học - thêm table (thông tin về bán cán sự lớp)

--- a/lopHoc.html
+++ b/lopHoc.html
@@ -500,39 +500,15 @@
                                         <option value="1">Học kỳ 1</option>
                                         <option value="2">Học kỳ 2</option>
                                         <option value="3">Học kỳ 3</option>
-
                                     </select>
                                     <i></i>
                                 </label>
                             </section>
                     </form>
                 </div>
-                <!-- <div class="col-xs-6 col-sm-5 col-md-5 col-lg-8">
-                    <div class="btn-group">
-                        <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            <span class="caret"></span>
-                            Action
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="javascript:void(0);">Action</a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);">Another action</a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);">Something else here</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="javascript:void(0);">Separated link</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div> -->
             </div>
             <div class="alert alert-info fade in">
-                <h4 class="text-center">Học Kỳ 1, Năm 2022 - 2023</h4>
+                <h2 class="text-center">Học Kỳ 1, Năm 2022 - 2023</h2>
             </div>
             <div class="well">
                 <div class="row">
@@ -543,6 +519,64 @@
                         <p><strong>Chức vụ lớp: </strong><span>Lớp trưởng/ không có</span></p>
                         <p><strong>Xếp hạng: </strong><span title="hạng thứ 23 có điểm cao nhất lớp">23/40</span></p>
                     </div>
+                </div>
+            </div>
+            <label for="">(*) Thông tin về <strong>ban cán sự lớp</strong></label>
+            <div class="well">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th class="so-thu-tu">STT</th>
+                                <th class="ten">Tên</th>
+                                <th class="chuc-vu">Chức vụ</th>
+                                <th class="avatar">Avatar</th>
+                                <th class="Số điện thoại">Liên lạc</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr title="Lớp trưởng">
+                                <td>1</td>
+                                <td>Lê Bảo</td>
+                                <td>Lớp trưởng</td>
+                                <td>
+                                    <div class="anh-1">
+                                    </div>
+                                </td>
+                                <td><strong>(+84)</strong> 123456789</td>
+                            </tr>
+                            <tr title="Lớp phó">
+                                <td>2</td>
+                                <td>Phan Trọng Huy</td>
+                                <td>Lớp phó</td>
+                                <td>
+                                    <div class="anh-2">
+                                    </div>
+                                </td>
+                                <td><strong>(+84)</strong> 123356729</td>
+                            </tr>
+                            <tr title="Lớp phó học tập">
+                                <td>3</td>
+                                <td>Lê Ngọc Nhữ</td>
+                                <td>Lớp phó (học tập)</td>
+                                <td>
+                                    <div class="anh-3">
+                                    </div>
+                                </td>
+                                <td><strong>(+84)</strong> 333456919</td>
+                            </tr>
+                            <tr title="Thủ quỹ">
+                                <td>4</td>
+                                <td>Võ Thị Ngốc Nghếck</td>
+                                <td>Thủ quỹ</td>
+                                <td>
+                                    <div class="anh-4">
+                                    </div>
+                                </td>
+                                <td><strong>(+84)</strong> 123456789</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
